# BondForge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: build.yml  lint.yml
bondforge/: __init__.py  __main__.py  app.py
bondforge/canvas/: __init__.py  export.py  geometry.py  hotkeys.py  scene.py  styles.py  view.py
bondforge/canvas/items/: __init__.py  arrow_item.py  atom_item.py  biopolymer_item.py  bond_item.py  text_item.py
bondforge/canvas/tools/: __init__.py  arrow_tool.py  atom_tool.py  base_tool.py  bond_tool.py  ring_tool.py  text_tool.py
bondforge/core/: __init__.py
bondforge/core/commands/: __init__.py
bondforge/core/io/: __init__.py  bforge.py  helm.py  jcamp.py  mol.py  pdb.py  rxn.py  smiles.py  xyz.py
bondforge/core/model/: __init__.py  arrow.py  atom.py  biopolymer.py  bond.py  document.py  molecule.py  monomer.py  monomer_library.py  spectrum.py  templates.py  text_annotation.py
bondforge/engine/: __init__.py  cleanup.py  conformer.py  forcefield.py  properties.py  rdkit_adapter.py
bondforge/engine/naming/: __init__.py  opsin_client.py
bondforge/engine/prediction/: __init__.py  ir.py  ms.py  nmr.py
bondforge/ui/: __init__.py  main_window.py
bondforge/ui/dialogs/: __init__.py  (+1 more)
tests/: conftest.py
tests/fixtures/: benzene.mol
tests/unit/: test_arrow_commands.py  test_arrow_model.py  test_atom_mapping_hotkey.py  test_bforge_format.py  test_biopolymer.py  test_bond_tool.py  test_cleanup.py  test_commands.py  test_conformer.py  test_geometry.py  test_helm.py  test_io.py  test_jcamp.py  test_molecule.py  test_prediction.py  test_properties.py  test_rdkit_adapter.py  test_ring_tool.py  test_rxn_export.py  test_spectrum.py  test_styles.py  test_templates.py  test_text_annotations.py  test_xyz_pdb.py
(+7 files in other folders)
