[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bondforge"
version = "0.1.0"
description = "BondForge - free and open-source desktop alternative to ChemDraw"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "BondForge Contributors" },
]
keywords = ["chemistry", "chemdraw", "molecule", "drawing", "education"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "PySide6>=6.7",
    "rdkit>=2024.03.1",
    "numpy>=1.26",
]

[project.optional-dependencies]
naming = [
    "py2opsin>=2.0.0",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-snapshot>=0.9",
    "pre-commit>=3.7",
]
packaging = [
    "briefcase>=0.3.19",
]

[project.scripts]
bondforge = "bondforge.__main__:main"

[project.urls]
Homepage = "https://github.com/grimlock5310/bondforge"
Repository = "https://github.com/grimlock5310/bondforge"
Issues = "https://github.com/grimlock5310/bondforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["bondforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
